Add info about new project Collectors

--- a/index.html
+++ b/index.html
@@ -3,70 +3,85 @@
 	use under the CCA 3.0 license (html5up.net/license) Paradigm Shift by HTML5 UP html5up.net | @ajlkn
 -->
 <html>
-	<head>
-		<title>Justin K Lee</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<meta name="description" content="" />
-		<meta name="keywords" content="" />
-		<link rel="icon" href="images/Vectorfinalplane.svg" type="image/x-icon" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<script src="https://code.iconify.design/1/1.0.4/iconify.min.js"></script>
-	</head>
-	<body class="is-preload">
 
-		<!-- Wrapper -->
-			<div id="wrapper">
+<head>
+	<title>Justin K Lee</title>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+	<meta name="description" content="" />
+	<meta name="keywords" content="" />
+	<link rel="icon" href="images/Vectorfinalplane.svg" type="image/x-icon" />
+	<link rel="stylesheet" href="assets/css/main.css" />
+	<script src="https://code.iconify.design/1/1.0.4/iconify.min.js"></script>
+</head>
 
-				<!-- Intro -->
-					<section class="intro">
-						<header>
-							<h1>Justin K Lee</h1>
-							<p>Full Stack Engineer who enjoys solving problems and hiking trails in the nature<a href=""></a> 
-							<ul class="actions">
-								<li><a href="#first" class="arrow scrolly"><span class="label">Next</span></a></li>
-							</ul>
-						</header>
-						<div class="content">
-							<span class="image fill" data-position="center"><img src="images/pic4.jpg" alt="" /></span>
-						</div>
-					</section>
+<body class="is-preload">
 
-				<!-- Section -->
-					<section id="first">
-						<header>
-							<h2>Who I am</h2>
-						</header>
-						<div class="content">
-							<p><strong style="font-size: 1.25rem">Full Stack Developer</strong> I build web application. I enjoy learning new technologies and ideas from the process.
-							When I am not working I spend my time with my family and also enjoy hiking trails in the nature.
-							</p>
-							<span class="image main"><img src="images/pic5.JPG" alt="myself_in_India" /></span>
-						</div>
-					</section>
+	<!-- Wrapper -->
+	<div id="wrapper">
 
-				<!-- Section -->
-					<section>
-						<header>
-							<h2>Main Skill Set</h2>
-						</header>
-						<div class="content">
-							<p><strong style="font-size: 1.25rem">TOOLS</strong> </p>
-							<ul class="feature-icons">
-								<li><span class="iconify solid feature-icons" data-icon="logos:react" data-inline="false"></span>React</li>
-								<li><span class="iconify solid feature-icons" data-icon="logos:redux" data-inline="false"></span>Redux</li>
-								<li><span class="iconify solid feature-icons" data-icon="mdi:language-ruby-on-rails" data-inline="false"></span>Ruby on Rails</li>
-								<li><span class="iconify solid feature-icons" data-icon="logos:d3" data-inline="false"></span>D3</li>
-								<li><span class="iconify solid feather-icons" data-icon="logos:ruby" data-inline="false"></span>Ruby</li>
-								<li><span class="iconify solid feather-icons" data-icon="logos:postgresql" data-inline="false"></span>PostgreSQL</li>
-								<li><span class="iconify solid feather-icons" data-icon="logos:mysql" data-inline="false"></span>MySQL</li>
-								<li><span class="iconify solid feature-icons" data-icon="logos:javascript" data-inline="false"></span>JavaScript</li>
-								<li><span class="iconify solid feature-icons" data-icon="logos:jquery" data-inline="false"></span>JQuery</li>
-								<li><span class="iconify solid feature-icons" data-icon="logos:css-3" data-inline="false"></span>CSS3</li>
-								<li><span class="iconify solid feature-icons" data-icon="logos:html-5" data-inline="false"></span>HTML5</li>
-								<li><span class="iconify solid feature-icons" data-icon="logos:git-icon" data-inline="false"></span>Git</li>
+		<!-- Intro -->
+		<section class="intro">
+			<header>
+				<h1>Justin K Lee</h1>
+				<p>Full Stack Engineer who enjoys solving problems and hiking trails in the nature<a href=""></a>
+				<ul class="actions">
+					<li><a href="#first" class="arrow scrolly"><span class="label">Next</span></a></li>
+				</ul>
+			</header>
+			<div class="content">
+				<span class="image fill" data-position="center"><img src="images/pic4.jpg" alt="" /></span>
+			</div>
+		</section>
 
-								<!-- <li class="icon solid fa-laptop">React/Redux</li>
+		<!-- Section -->
+		<section id="first">
+			<header>
+				<h2>Who I am</h2>
+			</header>
+			<div class="content">
+				<p><strong style="font-size: 1.25rem">Full Stack Developer</strong> I build web application. I enjoy
+					learning new technologies and ideas from the process.
+					When I am not working I spend my time with my family and also enjoy hiking trails in the nature.
+				</p>
+				<span class="image main"><img src="images/pic5.JPG" alt="myself_in_India" /></span>
+			</div>
+		</section>
+
+		<!-- Section -->
+		<section>
+			<header>
+				<h2>Main Skill Set</h2>
+			</header>
+			<div class="content">
+				<p><strong style="font-size: 1.25rem">TOOLS</strong> </p>
+				<ul class="feature-icons">
+					<li><span class="iconify solid feature-icons" data-icon="logos:react"
+							data-inline="false"></span>React</li>
+					<li><span class="iconify solid feature-icons" data-icon="logos:redux"
+							data-inline="false"></span>Redux</li>
+					<li><span class="iconify solid feature-icons" data-icon="mdi:language-ruby-on-rails"
+							data-inline="false"></span>Ruby on Rails</li>
+					<li><span class="iconify solid feature-icons" data-icon="logos:d3" data-inline="false"></span>D3
+					</li>
+					<li><span class="iconify solid feather-icons" data-icon="logos:ruby" data-inline="false"></span>Ruby
+					</li>
+					<li><span class="iconify solid feather-icons" data-icon="logos:postgresql"
+							data-inline="false"></span>PostgreSQL</li>
+					<li><span class="iconify solid feather-icons" data-icon="logos:mysql"
+							data-inline="false"></span>MySQL</li>
+					<li><span class="iconify solid feature-icons" data-icon="logos:javascript"
+							data-inline="false"></span>JavaScript</li>
+					<li><span class="iconify solid feature-icons" data-icon="logos:jquery"
+							data-inline="false"></span>JQuery</li>
+					<li><span class="iconify solid feature-icons" data-icon="logos:css-3"
+							data-inline="false"></span>CSS3</li>
+					<li><span class="iconify solid feature-icons" data-icon="logos:html-5"
+							data-inline="false"></span>HTML5</li>
+					<li><span class="iconify solid feature-icons" data-icon="logos:git-icon"
+							data-inline="false"></span>Git</li>
+
+					<!-- <li class="icon solid fa-laptop">React/Redux</li>
 									
 									<li class="icon solid fa-signal">Firebase</li>
 									<li class="icon solid fa-bolt">Ruby On Rails</li>
@@ -74,143 +89,166 @@
 								<li class="icon solid fa-cog">JavaScript</li>
 								<li class="icon solid fa-map-marker-alt">CSS</li>
 								<li class="icon solid fa-code">HTML</li> -->
-							</ul>
-						</div>
-					</section>
-
-				<!-- Section -->
-					<section>
-						<header>
-							<h2>Works</h2>
-						</header>
-						<div class="content">
-
-							<!-- Section -->
-								<section>
-									<header>
-										<h3 style = "padding: 2rem 0 0 0">Share Desk</h3>
-										<p>Share Desk App. Find work space any city around the world instantly. Host space in your house, apartment, or office for profit. Ruby on Rails Backend, Turbolink and Stimulus.js Ajax calls for infinite scrolling, Javascript, Bootstrap, Jquery DOM manipulation, Postgresql, Heroku server, Google/Facebook Omniauth, Google Maps API with Geocode, Reservation with Datepicker, Custom User Profile, Hosting a space, Advanced searching, Customer Star Rating, and Amazon AWS S3 database. Responsive flex and grid design, Inspired by WeWork and Air B&B.</p>
-									</header>
-									<div class="content">
-										<div class="site_frame">
-											<a href="https://deskshare-app.herokuapp.com/" target="_blank"><img src="images/share_desk.gif" alt="Sharedesk_screenshot" style="width: 600px; " /></a>
-										</div>
-										<div><a href="https://deskshare-app.herokuapp.com/" target="_blank"><strong><p>Live Site</p></strong></a></div>
-										<div>
-											<a href="https://github.com/DevNeoLee/sharedesk" target="_blank"><strong><p>GitHub Repository</p></strong></a>
-										</div>
-									</div>
-								</section>
-
-								<section>
-									<header>
-										<h3>Travelers to Canada Maps</h3>
-										<p>Data visualization with D3.js, Javascript, and algorithms searching and sorting JSON and CSV data sets from Statistics Canada. Interactive dynamic map, bar, and pie chart.</p>
-									</header>
-									<div class="content">
-										<div class="#">
-											<a href="https://devneolee.github.io/Canada_Tourist_Chart_d3/"  target="_blank"><img src="images/travel_data_d3.gif" alt="data_charts_travelers_to_Canada" style="width: 600px"/></a>
-										</div>
-										<div><a href="https://devneolee.github.io/Canada_Tourist_Chart_d3/" target="_blank">
-											<strong><p>Live Site</p></strong></a></div>
-										<div>
-											<a href="https://github.com/DevNeoLee/Canada_Tourist_Chart_d3" target="_blank">
-											<strong><p>GitHub Repository</p></strong></a>
-										</div>
-									</div>
-								</section>
-
-									<section>
-										<header>
-											<h3>Yo!Tube</h3>
-											<p>YouTube API service app. React state component architecture and asynchronous calls with Java Script.
-												Customized CSS inspired by UI and UX of Youtube.</p>
-										</header>
-										<div class="content">
-											<div class="#">
-												<a href="https://nameless-tor-08849.herokuapp.com/" target="_blank"><img src="images/yoTube.gif"
-														alt="yoTube_screenshot" style="width: 600px;" /></a>
-											</div>
-											<div><a href="https://nameless-tor-08849.herokuapp.com/" target="_blank">
-													<strong>
-														<p>Live Site(under construction)</p>
-													</strong></a></div>
-											<div>
-												<a href="https://github.com/DevNeoLee/Yo-Tube" target="_blank">
-													<strong>
-														<p>GitHub Repository</p>
-													</strong></a>
-											</div>
-										</div>
-									</section>
-						</div>
-					</section>
-
-				<!-- Section -->
-					<section>
-						<header>
-							<h2>Get in Touch</h2>
-						</header>
-						<div class="content">
-							<p><strong style="font-size: 1.25rem">Leave me a message</strong>  *I will respond within 48 hours</p>
-							<form action="https://formspree.io/xknrvzqv" method="POST">
-								<div class="fields">
-									<div class="field half">
-										<input type="text" name="name" id="name" placeholder="Name" />
-									</div>
-									<div class="field half">
-										<input type="email" name="email" id="email" placeholder="Email" />
-									</div>
-									<div class="field">
-										<textarea name="message" id="message" placeholder="Message" rows="7"></textarea>
-									</div>
-								</div>
-								<ul class="actions">
-									<input type="hidden" name="_next" value="https://mysite.com/thanks.html" />
-									<li><input type="submit" value="Send Message" class="button primary" /></li>
-								</ul>
-								<input type="hidden" name="_next" value="https://mysite.com/thanks.html" />
-							</form>
-						</div>
-						<footer>
-							<ul class="items">
-								<li>
-									<h3>Email</h3>
-									<span>justinklee215@gmail.com</span>
-								</li>
-								<li>
-									<h3>Phone</h3>
-									<span>(604)787-1185</span>
-								</li>
-								<li>
-									<h3>Address</h3>
-									<span>Vanouver/ San Francisco/ New York</span>
-								</li>
-								<li>
-									<!-- <h3><a target="_blank" href="#">Check my resume</a></h3> -->
-									<ul class="icons">
-										<li>LinkedIn <a target="_blank" href="https://www.linkedin.com/in/justinklee215/" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-										<li>GitHub <a target="_blank" href="https://github.com/DevNeoLee" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-										<li>AngelList <a target="_blank" href="https://angel.co/justinklee215" class="icon brands fa-angellist"><span class="label">AngelList</span></a></li>
-									
-									</ul>
-								</li>
-							</ul>
-						</footer>
-					</section>
-
-				<!-- Copyright -->
-					<div class="copyright">&copy; Justin K Lee. All rights reserved. Design: <a href="https://html5up.net">HTML5 UP</a><br></div>
-
+				</ul>
 			</div>
+		</section>
 
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
+		<!-- Section -->
+		<section>
+			<header>
+				<h2>Works</h2>
+			</header>
+			<div class="content">
 
-	</body>
+				<!-- Section -->
+				<section>
+					<header>
+						<h3>Collectors</h3>
+						<p>React Redux Frontend with Firebase Backend App. E-Commerce Shopping Mall Cart. Users can add
+							items in the cart and pay with Stripe payment system. Data state is managed with Redux.
+							Reseletor is also used to memoize cache to make the app more fast and efficient.</p>
+					</header>
+					<div class="content">
+						<div class="#">
+							<a href="https://collectors-shopping-mall.herokuapp.com/" target="_blank"><img
+									src="images/collectors.gif" alt="collectors_screenshot" style="width: 600px;" /></a>
+						</div>
+						<div><a href="https://collectors-shopping-mall.herokuapp.com/" target="_blank">
+								<strong>
+									<p>Live Site</p>
+								</strong></a></div>
+						<div>
+							<a href="https://github.com/DevNeoLee/justinklee" target="_blank">
+								<strong>
+									<p>GitHub Repository</p>
+								</strong></a>
+						</div>
+					</div>
+				</section>
+				<section>
+					<header>
+						<h3 style="padding: 2rem 0 0 0">Share Desk</h3>
+						<p>Share Desk App. Find work space any city around the world instantly. Host space in your
+							house, apartment, or office for profit. Ruby on Rails Backend, Turbolink and Stimulus.js
+							Ajax calls for infinite scrolling, Javascript, Bootstrap, Jquery DOM manipulation,
+							Postgresql, Heroku server, Google/Facebook Omniauth, Google Maps API with Geocode,
+							Reservation with Datepicker, Custom User Profile, Hosting a space, Advanced searching,
+							Customer Star Rating, and Amazon AWS S3 database. Responsive flex and grid design, Inspired
+							by WeWork and Air B&B.</p>
+					</header>
+					<div class="content">
+						<div class="site_frame">
+							<a href="https://deskshare-app.herokuapp.com/" target="_blank"><img
+									src="images/share_desk.gif" alt="Sharedesk_screenshot" style="width: 600px; " /></a>
+						</div>
+						<div><a href="https://deskshare-app.herokuapp.com/" target="_blank"><strong>
+									<p>Live Site</p>
+								</strong></a></div>
+						<div>
+							<a href="https://github.com/DevNeoLee/sharedesk" target="_blank"><strong>
+									<p>GitHub Repository</p>
+								</strong></a>
+						</div>
+					</div>
+				</section>
+
+				<section>
+					<header>
+						<h3>Travelers to Canada Maps</h3>
+						<p>Data visualization with D3.js, Javascript, and algorithms searching and sorting JSON and CSV
+							data sets from Statistics Canada. Interactive dynamic map, bar, and pie chart.</p>
+					</header>
+					<div class="content">
+						<div class="#">
+							<a href="https://devneolee.github.io/Canada_Tourist_Chart_d3/" target="_blank"><img
+									src="images/travel_data_d3.gif" alt="data_charts_travelers_to_Canada"
+									style="width: 600px" /></a>
+						</div>
+						<div><a href="https://devneolee.github.io/Canada_Tourist_Chart_d3/" target="_blank">
+								<strong>
+									<p>Live Site</p>
+								</strong></a></div>
+						<div>
+							<a href="https://github.com/DevNeoLee/Canada_Tourist_Chart_d3" target="_blank">
+								<strong>
+									<p>GitHub Repository</p>
+								</strong></a>
+						</div>
+					</div>
+				</section>
+			</div>
+		</section>
+
+		<!-- Section -->
+		<section>
+			<header>
+				<h2>Get in Touch</h2>
+			</header>
+			<div class="content">
+				<p><strong style="font-size: 1.25rem">Leave me a message</strong> *I will respond within 48 hours</p>
+				<form action="https://formspree.io/xknrvzqv" method="POST">
+					<div class="fields">
+						<div class="field half">
+							<input type="text" name="name" id="name" placeholder="Name" />
+						</div>
+						<div class="field half">
+							<input type="email" name="email" id="email" placeholder="Email" />
+						</div>
+						<div class="field">
+							<textarea name="message" id="message" placeholder="Message" rows="7"></textarea>
+						</div>
+					</div>
+					<ul class="actions">
+						<input type="hidden" name="_next" value="https://mysite.com/thanks.html" />
+						<li><input type="submit" value="Send Message" class="button primary" /></li>
+					</ul>
+					<input type="hidden" name="_next" value="https://mysite.com/thanks.html" />
+				</form>
+			</div>
+			<footer>
+				<ul class="items">
+					<li>
+						<h3>Email</h3>
+						<span>justinklee215@gmail.com</span>
+					</li>
+					<li>
+						<h3>Phone</h3>
+						<span>(604)787-1185</span>
+					</li>
+					<li>
+						<h3>Address</h3>
+						<span>Vanouver/ San Francisco/ New York</span>
+					</li>
+					<li>
+						<!-- <h3><a target="_blank" href="#">Check my resume</a></h3> -->
+						<ul class="icons">
+							<li>LinkedIn <a target="_blank" href="https://www.linkedin.com/in/justinklee215/"
+									class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+							<li>GitHub <a target="_blank" href="https://github.com/DevNeoLee"
+									class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+							<li>AngelList <a target="_blank" href="https://angel.co/justinklee215"
+									class="icon brands fa-angellist"><span class="label">AngelList</span></a></li>
+
+						</ul>
+					</li>
+				</ul>
+			</footer>
+		</section>
+
+		<!-- Copyright -->
+		<div class="copyright">&copy; Justin K Lee. All rights reserved. Design: <a href="https://html5up.net">HTML5
+				UP</a><br></div>
+
+	</div>
+
+	<!-- Scripts -->
+	<script src="assets/js/jquery.min.js"></script>
+	<script src="assets/js/jquery.scrolly.min.js"></script>
+	<script src="assets/js/browser.min.js"></script>
+	<script src="assets/js/breakpoints.min.js"></script>
+	<script src="assets/js/util.js"></script>
+	<script src="assets/js/main.js"></script>
+
+</body>
+
 </html>
