Update Skillsets HTML

--- a/index.html
+++ b/index.html
@@ -60,20 +60,22 @@
 							data-inline="false"></span>React</li>
 					<li><span class="iconify solid feature-icons" data-icon="logos:redux"
 							data-inline="false"></span>Redux</li>
+					<li><span class="iconify solid feature-icons" data-icon="logos:javascript"
+						data-inline="false"></span>JavaScript</li>
 					<li><span class="iconify solid feature-icons" data-icon="mdi:language-ruby-on-rails"
 							data-inline="false"></span>Ruby on Rails</li>
-					<li><span class="iconify solid feature-icons" data-icon="logos:d3" data-inline="false"></span>D3
-					</li>
 					<li><span class="iconify solid feather-icons" data-icon="logos:ruby" data-inline="false"></span>Ruby
 					</li>
+					<li><span class="iconify" data-icon="logos:graphql" data-inline="false"></span>GraphQL</li>
+					<li><span class="iconify" data-icon="logos:gatsby" data-inline="false"></span>Gatsby</li>
 					<li><span class="iconify solid feather-icons" data-icon="logos:postgresql"
-							data-inline="false"></span>PostgreSQL</li>
+						data-inline="false"></span>PostgreSQL</li>
 					<li><span class="iconify solid feather-icons" data-icon="logos:mysql"
-							data-inline="false"></span>MySQL</li>
-					<li><span class="iconify solid feature-icons" data-icon="logos:javascript"
-							data-inline="false"></span>JavaScript</li>
+						data-inline="false"></span>MySQL</li>
 					<li><span class="iconify solid feature-icons" data-icon="logos:jquery"
-							data-inline="false"></span>JQuery</li>
+						data-inline="false"></span>JQuery</li>
+					<li><span class="iconify solid feature-icons" data-icon="logos:d3" data-inline="false"></span>D3
+					</li>
 					<li><span class="iconify solid feature-icons" data-icon="logos:css-3"
 							data-inline="false"></span>CSS3</li>
 					<li><span class="iconify solid feature-icons" data-icon="logos:html-5"
