Update skill sets with icons

--- a/index.html
+++ b/index.html
@@ -66,6 +66,8 @@
 							data-inline="false"></span>Ruby on Rails</li>
 					<li><span class="iconify solid feather-icons" data-icon="logos:ruby" data-inline="false"></span>Ruby
 					</li>
+					<li><span class="iconify" data-icon="logos:aws-s3" data-inline="false"></span>Amazon S3</li>
+					<li><span class="iconify" data-icon="logos:firebase" data-inline="false"></span>Google Firebase</li>
 					<li><span class="iconify" data-icon="logos:graphql" data-inline="false"></span>GraphQL</li>
 					<li><span class="iconify" data-icon="logos:gatsby" data-inline="false"></span>Gatsby</li>
 					<li><span class="iconify solid feather-icons" data-icon="logos:postgresql"
@@ -82,6 +84,7 @@
 							data-inline="false"></span>HTML5</li>
 					<li><span class="iconify solid feature-icons" data-icon="logos:git-icon"
 							data-inline="false"></span>Git</li>
+					
 
 					<!-- <li class="icon solid fa-laptop">React/Redux</li>
 									
