--- a/index.html
+++ b/index.html
@@ -241,8 +241,8 @@
 		</section>
 
 		<!-- Copyright -->
-		<div class="copyright">&copy; Justin K Lee. All rights reserved. Design: <a href="https://html5up.net">HTML5
-				UP</a><br></div>
+		<div class="copyright">&copy; <a href="https://devneolee.github.io/justinklee/">Justin K Lee</a> All rights reserved. <br>Design: <a href="https://html5up.net">HTML5
+				UP</a><br> Icons: <a href="https://iconify.design/">Iconify</a></div>
 
 	</div>
 
