Update project description

--- a/index.html
+++ b/index.html
@@ -109,9 +109,9 @@
 				<section>
 					<header>
 						<h3>Collectors</h3>
-						<p>React Redux Frontend with Firebase Backend App. E-Commerce Shopping Mall Cart. Users can add
-							items in the cart and pay with Stripe payment system. Data state is managed with Redux.
-							Reseletor is also used to memoize cache to make the app more fast and efficient.</p>
+						<p>E-Commerce Shopping Mall Pages, Checkout Cart, and Payment App. React Frontend and Redux global state management. Google Firebase Backend for User Authentification and Shopping Products Data Fetching.
+							Adding items in the cart and pay with Stripe payment system. Memoization of using selectors. Nested Routing. State Normalization. HOC patterns. Asynchoronous activity with a middleware, Thunks.
+							Performance enhancement with Code Splitting, React Lazy and Suspense,and React DevTools profiler. Modular CSS for local scoping.</p>
 					</header>
 					<div class="content">
 						<div class="#">
@@ -133,8 +133,8 @@
 				<section>
 					<header>
 						<h3 style="padding: 2rem 0 0 0">Share Desk</h3>
-						<p>Share Desk App. Find work space any city around the world instantly. Host space in your
-							house, apartment, or office for profit. Ruby on Rails Backend, Turbolink and Stimulus.js
+						<p>Share Desk App. Providing work spaces any where around the world instantly by searching local availability. Hosting spaces in your
+							houses, apartments, or offices for profit. Ruby on Rails Backend, Turbolink and Stimulus.js
 							Ajax calls for infinite scrolling, Javascript, Bootstrap, Jquery DOM manipulation,
 							Postgresql, Heroku server, Google/Facebook Omniauth, Google Maps API with Geocode,
 							Reservation with Datepicker, Custom User Profile, Hosting a space, Advanced searching,
@@ -160,7 +160,7 @@
 				<section>
 					<header>
 						<h3>Travelers to Canada Maps</h3>
-						<p>Data visualization with D3.js, Javascript, and algorithms searching and sorting JSON and CSV
+						<p>Data visualization with D3.js, JavaScript, and algorithms searching and sorting JSON and CSV
 							data sets from Statistics Canada. Interactive dynamic map, bar, and pie chart.</p>
 					</header>
 					<div class="content">
