Update project data for Collectors App

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 						<h3>Collectors</h3>
 						<p>E-Commerce shopping, checkout cart, and payment system app. React/Redux frontend global state management. Firebase backend with Google Omniauth user authentification and products data.
 							Stripe payment system. Performance enhancement with selectors memoization, state normalization, code splitting, React Lazy and Suspense, nested routing, HOC patterns, and React DevTools profiler.
-							Asynchoronous Thunks middleware. Modular CSS for local scoping.</p>
+							Asynchoronous Thunks middleware. Modular CSS for local scoping. Responsive flex and grid design.</p>
 					</header>
 					<div class="content">
 						<div class="#">
@@ -180,7 +180,7 @@
 				<h2>Get in Touch</h2>
 			</header>
 			<div class="content">
-				<p><strong style="font-size: 1.25rem">Leave me a message</strong> *I will respond within 48 hours</p>
+				<p><strong style="font-size: 1.25rem">Leave me a message</strong></p>
 				<form action="https://formspree.io/xknrvzqv" method="POST">
 					<div class="fields">
 						<div class="field half">
