Update project description for Data Visualization

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 					<header>
 						<h3>Travelers to Canada</h3>
 						<p>Data visualization with D3.js, JavaScript, and algorithms searching and sorting JSON and CSV
-							data sets from Statistics Canada. Interactive dynamic map, bar, and pie chart.</p>
+							data sets from Statistics Canada. Interactive dynamic map, bar, and pie chart. Responsive flex and grid design. </p>
 					</header>
 					<div class="content">
 						<div class="#">
