Update project description

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 				<section>
 					<header>
 						<h3>Collectors</h3>
-						<p>E-Commerce shopping, checkout cart, and payment system app. React/Redux frontend global state management. Firebase backend with Google Omniauth user authentification and products data.
+						<p>E-Commerce shopping, checkout cart, and payment system app. React/Redux frontend global state management with JavaScript ES6. Firebase backend with Google Omniauth user authentification and products data.
 							Stripe payment system. Performance enhancement with selectors memoization, state normalization, code splitting, React Lazy and Suspense, nested routing, HOC patterns, and React DevTools profiler.
 							Asynchoronous Thunks middleware. Modular CSS for local scoping. Responsive flex and grid design.</p>
 					</header>
@@ -125,7 +125,7 @@
 						<h3 style="padding: 2rem 0 0 0">Share Desk</h3>
 						<p>Share Desk App. Providing work spaces any where around the world instantly by searching local availability. Hosting spaces in your
 							houses, apartments, or offices for profit. Ruby on Rails Backend, Turbolink and Stimulus.js
-							Ajax calls for infinite scrolling, Javascript, Bootstrap, Jquery DOM manipulation,
+							Ajax calls for infinite scrolling, JavaScript, Bootstrap, Jquery DOM manipulation,
 							Postgresql, Heroku server, Google/Facebook Omniauth, Google Maps API with Geocode,
 							Reservation with Datepicker, Custom User Profile, Hosting a space, Advanced searching,
 							Customer Star Rating, and Amazon AWS S3 database. Responsive flex and grid design, Inspired
@@ -150,8 +150,11 @@
 				<section>
 					<header>
 						<h3>Travelers to Canada</h3>
-						<p>Data visualization with D3.js, JavaScript, and algorithms searching and sorting JSON and CSV
-							data sets from Statistics Canada. Interactive dynamic map, bar, and pie chart. Responsive flex and grid design. </p>
+						<p>Interactive Datavisualization with D3 JavaScript library representing large set of historical visitor statistics to
+						Canada for instant knowledge of perception and cognition of the big data. Data Transformations such as aggregation and 
+						filtering for visualization and structured into objects suitable for different forms of visual charts such as doughnut, map, and bar.
+						Manipulating DOM elements dynamically and interactively using searching and sorting JSON and CSV data sets from Statistics Canada. 
+						Responsive flex and grid design. </p>
 					</header>
 					<div class="content">
 						<div class="#">
