Update Skill Set with Logo and Descripttion about AWS, Ant Design, and TypeScript

--- a/index.html
+++ b/index.html
@@ -60,14 +60,14 @@
 							data-inline="false"></span>React</li>
 					<li><span class="iconify solid feature-icons" data-icon="logos:redux"
 							data-inline="false"></span>Redux</li>
+					<li><span class="iconify" data-icon="logos:typescript-icon" data-inline="false"></span>TypeScript</li>
 					<li><span class="iconify solid feature-icons" data-icon="logos:javascript"
-						data-inline="false"></span>JavaScript</li>
+								data-inline="false"></span>JavaScript</li>
 					<li><span class="iconify solid feature-icons" data-icon="mdi:language-ruby-on-rails"
-							data-inline="false"></span>Ruby on Rails</li>
-					<li><span class="iconify solid feather-icons" data-icon="logos:ruby" data-inline="false"></span>Ruby
-					</li>
-					<li><span class="iconify" data-icon="logos:aws-s3" data-inline="false"></span>Amazon S3</li>
-					<li><span class="iconify" data-icon="logos:firebase" data-inline="false"></span>Google Firebase</li>
+									data-inline="false"></span>Ruby on Rails</li>
+					<li><span class="iconify solid feather-icons" data-icon="logos:ruby" data-inline="false"></span>Ruby</li>
+					<li><span class="iconify" data-icon="logos:aws" data-inline="false"></span> AWS</li>
+					<li><span class="iconify" data-icon="logos:firebase" data-inline="false"></span>Firebase</li>
 					<li><span class="iconify" data-icon="logos:graphql" data-inline="false"></span>GraphQL</li>
 					<li><span class="iconify" data-icon="logos:gatsby" data-inline="false"></span>Gatsby</li>
 					<li><span class="iconify solid feather-icons" data-icon="logos:postgresql"
@@ -82,6 +82,7 @@
 							data-inline="false"></span>CSS3</li>
 					<li><span class="iconify solid feature-icons" data-icon="logos:html-5"
 							data-inline="false"></span>HTML5</li>
+					<li><span class="iconify" data-icon="logos:ant-design" data-inline="false"></span>Ant Design</li>
 					<li><span class="iconify solid feature-icons" data-icon="logos:git-icon"
 							data-inline="false"></span>Git</li>
 				</ul>
