update new vercel address for link redux-ecommerce-store app

--- a/index.html
+++ b/index.html
@@ -106,10 +106,10 @@
 					</header>
 					<div class="content">
 						<div class="#">
-							<a href="https://collectors-shopping-mall.herokuapp.com/" target="_blank"><img
+							<a href="https://collectors-react-redux-firebase-e-commerce-store-app.vercel.app/" target="_blank"><img
 									src="images/collectors.gif" alt="collectors_screenshot" style="width: 600px;" /></a>
 						</div>
-						<div><a href="https://collectors-shopping-mall.herokuapp.com/" target="_blank">
+						<div><a href="https://collectors-react-redux-firebase-e-commerce-store-app.vercel.app/" target="_blank">
 								<strong>
 									<p>Live Site</p>
 								</strong></a></div>
